--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ button {
   border-radius: 25px;
   flex-wrap: wrap;
   margin-right: 10px;
+  margin-bottom: 10px;
   padding: 8px 10px;
   /* background-color: aquamarine; */
 }
